--- a/gb/20/8/12/n12324566.md
+++ b/gb/20/8/12/n12324566.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/krpvmk3865/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/krpvmk3865/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/krpvmk3865/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/krpvmk3865/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/krpvmk3865/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/krpvmk3865/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/krpvmk3865/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/krpvmk3865/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/krpvmk3865/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/krpvmk3865/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/krpvmk3865/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/krpvmk3865/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/krpvmk3865/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/krpvmk3865/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/krpvmk3865/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/krpvmk3865/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/krpvmk3865/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/krpvmk3865/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/krpvmk3865/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/krpvmk3865/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/krpvmk3865/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/krpvmk3865/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/krpvmk3865/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/krpvmk3865/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/krpvmk3865/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/krpvmk3865/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/krpvmk3865/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/krpvmk3865/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/krpvmk3865/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/krpvmk3865/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/krpvmk3865/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/krpvmk3865/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/krpvmk3865/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/krpvmk3865/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/krpvmk3865/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/krpvmk3865/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/krpvmk3865/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/krpvmk3865/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/krpvmk3865/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/krpvmk3865/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/krpvmk3865/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/krpvmk3865/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/krpvmk3865/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/krpvmk3865/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/krpvmk3865/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/krpvmk3865/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/krpvmk3865/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>维州150万人将靠JobKeeper度日 感恩联邦支持</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2020年08月12日讯】（大纪元记者宋清宁澳洲墨尔本编译报导）<ahref="https://github.com/krpvmk3865/djy/blob/master/gb/tag/%E7%BB%B4%E5%B7%9E.md#1">维州</a>州长安德鲁斯（Daniel Andrews）说，在<ahref="https://github.com/krpvmk3865/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（武汉肺炎）疫情过后的经济重建中，确保<ahref="https://github.com/krpvmk3865/djy/blob/master/gb/tag/%E5%B0%B1%E4%B8%9A.md#1">就业</a>保障将是一个重点。预计到9月底，150万名维州人将依赖联邦的保工薪水补贴（JobKeeper）。</p>
-<p>上周五（7日），联邦财政部长弗莱登伯格（Josh Frydenberg）宣布放宽申领条件，使额外53万名<ahref="https://github.com/krpvmk3865/djy/blob/master/gb/tag/%E7%BB%B4%E5%B7%9E.md#1">维州</a>人能够领取该补贴。他预计，维州私营部门近一半的员工将很快依赖JobKeeper度日。</p>
+<p>【大纪元2020年08月12日讯】（大纪元记者宋清宁澳洲墨尔本编译报导）<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%BB%B4%E5%B7%9E.md#1">维州</a>州长安德鲁斯（Daniel Andrews）说，在<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（武汉肺炎）疫情过后的经济重建中，确保<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%B0%B1%E4%B8%9A.md#1">就业</a>保障将是一个重点。预计到9月底，150万名维州人将依赖联邦的保工薪水补贴（JobKeeper）。</p>
+<p>上周五（7日），联邦财政部长弗莱登伯格（Josh Frydenberg）宣布放宽申领条件，使额外53万名<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%BB%B4%E5%B7%9E.md#1">维州</a>人能够领取该补贴。他预计，维州私营部门近一半的员工将很快依赖JobKeeper度日。</p>
 <p>联邦为JobKeeper计划增拨的156亿澳元中，超过130亿元将流向维州人。州长安德鲁斯表示，他感谢总理和财长的额外支持。</p>
 <p>他说：“我一直很清楚JobKeeper和调整JobKeeper补贴额度的重要性。我相信企业、工人和维州政府，还包括我个人都对此深表感谢。”</p>
 <p>墨尔本Lucky Penny咖啡馆老板拉尼根（Matt Lanigan）对《时代报》说，JobKeeper补贴计划使他保住了自己的生意。</p>
@@ -14,7 +14,7 @@
 <p>他说：“没有JobKeeper，这家店就倒闭了。这就是事实。”“我们的团队很小，但每个人都得付房租，维持生计，没有JobKeeper，他们就做不到。”</p>
 <p>安德鲁斯表示，严格的四级封锁令使政府很难“为企业提供客户”，维州政府不太可能宣布进一步的经济刺激措施。</p>
 <p>他说，州政府将在10月份的预算中宣布更多的刺激措施，在短期内，政府的工作重点是通过其“生存补贴”来确保企业继续周转。</p>
-<p>安德鲁斯政府此前承诺说，将对“零工经济”（gig economy）采取行动，改善这类工作的<ahref="https://github.com/krpvmk3865/djy/blob/master/gb/tag/%E5%B0%B1%E4%B8%9A.md#1">就业</a>条件。</p>
+<p>安德鲁斯政府此前承诺说，将对“零工经济”（gig economy）采取行动，改善这类工作的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%B0%B1%E4%B8%9A.md#1">就业</a>条件。</p>
 <p>他说：“这个没有就业保障的问题……疫情揭露了数十万维州人的财务和就业安排是多么脆弱。”</p>
 <p>责任编辑：李欣然</p>
 
@@ -22,41 +22,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/krpvmk3865/djy/blob/master/gb/20/3/7/n11922895.md#1">中共病毒：维州死亡病例创新高 染疫者年轻人居多</a></li>
-<li><a href="https://github.com/krpvmk3865/djy/blob/master/gb/20/8/12/n12324143.md#1">疫情听证会“拷问”州长 隔离酒店丑闻不断</a></li>
-<li><a href="https://github.com/krpvmk3865/djy/blob/master/gb/20/8/12/n12324134.md#1">标普威胁降低维州AAA信用评级</a></li>
-<li><a href="https://github.com/krpvmk3865/djy/blob/master/gb/20/8/11/n12323857.md#1">新禽流感病毒袭维州东部 数千火鸡将被销毁</a></li>
-<li><a href="https://github.com/krpvmk3865/djy/blob/master/gb/20/8/11/n12321382.md#1">维州日均45海外司机挨罚</a></li>
-<li><a href="https://github.com/krpvmk3865/djy/blob/master/gb/20/8/11/n12321828.md#1">患者现异常症状 中共肺炎影响人体多个器官</a></li>
-<li><a href="https://github.com/krpvmk3865/djy/blob/master/gb/20/8/11/n12321248.md#1">疫情影响心理健康 墨尔本公司出奇招提振士气</a></li>
-<li><a href="https://github.com/krpvmk3865/djy/blob/master/gb/20/8/11/n12321905.md#1">维州私校追讨欠费 部分家长欠费破产</a></li>
-<li><a href="https://github.com/krpvmk3865/djy/blob/master/gb/20/8/11/n12321689.md#1">实地看房遭禁 专家预计墨尔本市场趋冷</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753149.md#1">澳洲学校终止合作 北领地孔子课堂关闭</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753142.md#1">澳总理出访印尼加深商贸合作 讨论安全问题</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752906.md#1">对抗王毅太平洋岛国行 美加强与该地区关系</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752766.md#1">纪念六四33周年 墨尔本举办系列活动</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752765.md#1">墨尔本开发自闭症筛查技术  准确率高达83%</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752753.md#1">不做律师爱洗鞋 墨尔本男子创业成功</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751927.md#1">北约军演接管美杜鲁门号航母 向中共释信号</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752578.md#1">市场预计一连串加息将至 房贷月供将增加千元</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752558.md#1">澳洲海上侦察机遭中共战机危险拦截</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752208.md#1">遭袋鼠疯狂追击 澳洲男一格斗技成功制伏</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/14/n9840046.md#1" target="_blank">林辉：影射“毛太阳”《十万个为什么》被批</a></li><li><a href="https://github.com/krpvmk3865/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/24/n9888525.md#1" target="_blank">从瘫痪边缘走向健康 内科医生感恩李洪志先生</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/16/n11262822.md#1" target="_blank">【征文】兰音：传统社会中妻子的真实地位</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/10/12/n8391689.md#1" target="_blank">一个江湖亡命汉的不绝之命</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/krpvmk3865/djy/blob/master/gb/20/8/11/n12322303.md#1">中国制口罩伪装MIT闯关入台 海关单日查获7350片</a></li>
-<li><a href="https://github.com/krpvmk3865/djy/blob/master/gb/20/8/11/n12321403.md#1">中共制裁美国人 逮捕黎智英 蓬佩奥强硬回应</a></li>
-<li><a href="https://github.com/krpvmk3865/djy/blob/master/gb/20/8/11/n12322988.md#1">【有冇搞错】共机越中线 距战争爆发只差30秒</a></li>
-<li><a href="https://github.com/krpvmk3865/djy/blob/master/gb/20/8/11/n12323838.md#1">内斗猛烈 习误判局势 战狼术遭将领反对</a></li>
-<li><a href="https://github.com/krpvmk3865/djy/blob/master/gb/20/8/11/n12321988.md#1">美国史上威力最强传统炸药引爆 超越贝鲁特爆炸</a></li>
-<li><a href="https://github.com/krpvmk3865/djy/blob/master/gb/20/8/9/n12318283.md#1">与李小龙交手谁会赢 成龙的回答令人不齿</a></li>
-<li><a href="https://github.com/krpvmk3865/djy/blob/master/gb/20/8/10/n12318600.md#1">TWICE线上开唱126国粉丝参与 子瑜新造型亮相</a></li>
-<li><a href="https://github.com/krpvmk3865/djy/blob/master/gb/20/8/9/n12318111.md#1">胡歌主演新剧 被王家卫要求减重8至10公斤</a></li>
-<li><a href="https://github.com/krpvmk3865/djy/blob/master/gb/20/8/10/n12320539.md#1">林夕改编歌词赠罗冠聪 无知网军污蔑成笑柄</a></li>
-<li><a href="https://github.com/krpvmk3865/djy/blob/master/gb/20/8/10/n12320702.md#1">200港警搜查壹传媒 何韵诗等艺人发声谴责</a></li>
-<li><a href="https://github.com/krpvmk3865/djy/blob/master/gb/11/1/4/n3132042.md#1">巴洛克艺术（三）鲁本斯</a></li>
-<li><a href="https://github.com/krpvmk3865/djy/blob/master/gb/20/5/22/n12129529.md#1">华盛顿将军系列故事：为了国家，请留下</a></li>
-<li><a href="https://github.com/krpvmk3865/djy/blob/master/gb/20/7/18/n12265329.md#1">【医案】驽马十驾</a></li>
-<li><a href="https://github.com/krpvmk3865/djy/blob/master/gb/20/8/10/n12318535.md#1">新的人生在兑现（ 4 ）天垂象 地成之</a></li>
-<li><a href="https://github.com/krpvmk3865/djy/blob/master/gb/20/8/6/n12310782.md#1">顺天意民心退位让国 隆裕太后获盛赞</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/19/n11953667.md#1">大陆网络流传的一份死亡名单 引关注</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/19/n11955384.md#1">北京昆明湖罕见涨潮 传上次涨潮后毛泽东去世</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/19/n11953195.md#1">16岁学生致信武汉作家方方 引起轩然大波</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11950901.md#1">杜汶泽用口罩换米 与何韵诗幽默互动笑翻网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11950740.md#1">周杰伦全家澳洲度假 返台须居家隔离14天</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/13/n11938995.md#1">他在另外空间看见了故人 明白了侵吞善款的代价</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947360.md#1">一舞（武）两用的智慧</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/krpvmk3865/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/krpvmk3865/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/12/n12324566.htm">维州150万人将靠JobKeeper度日 感恩联邦支持</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/12/n12324566.htm">维州150万人将靠JobKeeper度日 感恩联邦支持</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/krpvmk3865/djy/blob/master/gb/20/8/12/n12324566.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/krpvmk3865/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/krpvmk3865/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/krpvmk3865/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/krpvmk3865/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/krpvmk3865/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/krpvmk3865/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/krpvmk3865/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/krpvmk3865/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/krpvmk3865/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/krpvmk3865/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/krpvmk3865/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/krpvmk3865/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/krpvmk3865/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/krpvmk3865/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/krpvmk3865/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/krpvmk3865/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/krpvmk3865/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/krpvmk3865/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/krpvmk3865/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/krpvmk3865/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/krpvmk3865/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/krpvmk3865/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/krpvmk3865/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/krpvmk3865/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/krpvmk3865/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/krpvmk3865/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/krpvmk3865/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/krpvmk3865/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/krpvmk3865/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/krpvmk3865/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/krpvmk3865/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/krpvmk3865/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/krpvmk3865/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/krpvmk3865/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/krpvmk3865/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/krpvmk3865/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/krpvmk3865/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/krpvmk3865/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/krpvmk3865/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/krpvmk3865/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/krpvmk3865/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/krpvmk3865/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/krpvmk3865/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/krpvmk3865/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/krpvmk3865/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/krpvmk3865/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/krpvmk3865/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/krpvmk3865/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/20/8/12/n12324566.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
